--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,4 +9,4 @@ javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=
-user.properties.file=C:\\Users\\Afsal\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
+user.properties.file=C:\\Users\\HICOM\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
